[gd_scene load_steps=3 format=3 uid="uid://uumsojwcn383"]

[ext_resource type="Script" path="res://ui/game_over_screen.gd" id="1_ike8c"]

[sub_resource type="LabelSettings" id="LabelSettings_y52m1"]
font_size = 50
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_color = Color(0.740461, 0.237731, 9.62615e-08, 1)
shadow_offset = Vector2(1, 3)

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ike8c")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.443137)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_y52m1")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Score:"
horizontal_alignment = 1

[node name="ScoreAmountLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "000"
horizontal_alignment = 1

[node name="ReplayButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play Again"

[connection signal="button_up" from="VBoxContainer/ReplayButton" to="." method="_on_replay_button_button_up"]
